--- a/packages/ui/back-top/src/index.less
+++ b/packages/ui/back-top/src/index.less
@@ -3,9 +3,13 @@
 .@{osui-back-top-class-prefix} {
     background: var(--color-gray-7);
     border-radius: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-    img {
-        margin: 8px 0 0 8px;
+    svg {
+        font-size: 24px;
+        color: var(--color-gray-1);
     }
 
     &-circle {
