fix(icons): 修复icons build时的问题

--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -106,3 +106,10 @@
 // ---
 @select-item-selected-bg: var(--select-item-selected-bg);
 @select-item-active-bg: var(--select-item-active-bg);
+
+// 一些less变量patch
+// ----
+@height-s: 24px;
+@height-m: 30px;
+@height-l: 40px;
+@height-xl: 50px;
