--- a/packages/ui/alert/src/index.less
+++ b/packages/ui/alert/src/index.less
@@ -4,58 +4,58 @@
     .ant-alert-close-icon {
         font-size: 14px;
     }
-}
 
-.@{osui-alert-class-prefix}.ant-alert-with-description {
-    .ant-alert-message {
-        font-size: 14px;
-        font-weight: bold;
+    &.ant-alert-with-description {
+        .ant-alert-message {
+            font-size: 14px;
+            font-weight: bold;
+        }
+
+        .ant-alert-icon {
+            font-size: 14px;
+            top: 12px;
+            left: 16px;
+        }
     }
 
-    .ant-alert-icon {
-        font-size: 14px;
-        top: 12px;
-        left: 16px;
-    }
-}
+    &.ant-alert-warning {
+        .ant-alert-message {
+            color: var(--theme-warning-color);
+        }
 
-.@{osui-alert-class-prefix}.ant-alert-warning {
-    .ant-alert-message {
-        color: var(--theme-warning-color);
+        .ant-alert-description {
+            color: var(--theme-warning-color);
+        }
     }
 
-    .ant-alert-description {
-        color: var(--theme-warning-color);
-    }
-}
+    &.ant-alert-error {
+        .ant-alert-message {
+            color: var(--color-error-4);
+        }
 
-.@{osui-alert-class-prefix}.ant-alert-error {
-    .ant-alert-message {
-        color: var(--color-error-4);
-    }
-
-    .ant-alert-description {
-        color: var(--color-error-4);
-    }
-}
-
-.@{osui-alert-class-prefix}.ant-alert-info {
-    .ant-alert-message {
-        color: var(--theme-primary-color);
+        .ant-alert-description {
+            color: var(--color-error-4);
+        }
     }
 
-    .ant-alert-description {
-        color: var(--theme-primary-color);
-    }
-}
+    &.ant-alert-info {
+        .ant-alert-message {
+            color: var(--theme-primary-color);
+        }
 
-.@{osui-alert-class-prefix}.ant-alert-success {
-    .ant-alert-message {
-        font-size: 14px;
-        color: var(--theme-success-color);
+        .ant-alert-description {
+            color: var(--theme-primary-color);
+        }
     }
 
-    .ant-alert-description {
-        color: var(--theme-success-color);
+    &.ant-alert-success {
+        .ant-alert-message {
+            font-size: 14px;
+            color: var(--theme-success-color);
+        }
+
+        .ant-alert-description {
+            color: var(--theme-success-color);
+        }
     }
 }
