--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -143,7 +143,10 @@
 @ee-input-error-shadow: 0 2px 6px 0 var(--theme-error-color);
 @ee-input-warning-shadow: 0 2px 6px 0 var(--theme-warning-color);
 
-//alert
+/**
+ * alert
+ * 信息提示
+ */
 @alert-success-border-color: var(--alert-success-border-color);
 @alert-success-bg-color: var(--alert-success-bg-color);
 @alert-success-icon-color: var(--alert-success-icon-color);
