fix: 修改css文件和格式

--- a/packages/ui/timeline/src/index.less
+++ b/packages/ui/timeline/src/index.less
@@ -1,57 +1,1 @@
-@osui-timeline-class-prefix: osui-alert;
-
-.@{osui-timeline-class-prefix} {
-    .ant-alert-with-description {
-        .ant-alert-message {
-            font-size: 14px;
-            font-weight: bold;
-        }
-
-        .ant-alert-icon {
-            font-size: 14px;
-            top: 12px;
-            left: 16px;
-        }
-    }
-
-    .ant-alert-success {
-        .ant-alert-message {
-            font-size: 14px;
-            color: var(--theme-success-color);
-        }
-
-        .ant-alert-description {
-            color: var(--theme-success-color);
-        }
-    }
-
-    .ant-alert-warning {
-        .ant-alert-message {
-            color: var(--theme-warning-color);
-        }
-
-        .ant-alert-description {
-            color: var(--theme-warning-color);
-        }
-    }
-
-    .ant-alert-error {
-        .ant-alert-message {
-            color: var(--color-error-4);
-        }
-
-        .ant-alert-description {
-            color: var(--color-error-4);
-        }
-    }
-
-    .ant-alert-info {
-        .ant-alert-message {
-            color: var(--theme-primary-color);
-        }
-
-        .ant-alert-description {
-            color: var(--theme-primary-color);
-        }
-    }
-}
+@osui-timeline-class-prefix: osui-timeline;
