fix: 修改css和doc文件

--- a/packages/ui/alert/src/index.less
+++ b/packages/ui/alert/src/index.less
@@ -30,11 +30,11 @@
 
     &.ant-alert-error {
         .ant-alert-message {
-            color: var(--color-error-4);
+            color: var(--theme-error-color);
         }
 
         .ant-alert-description {
-            color: var(--color-error-4);
+            color: var(--theme-error-color);
         }
     }
 
