fix(antd-vars-patch.less): 删除ee的css

--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -114,39 +114,8 @@
 @height-l: 40px;
 @height-xl: 50px;
 
-/**
- * text
- * 字体相关
- */
-@ee-font-family-no-number: "Helvetica Neue", "Helvetica", "Arial", "PingFangSC-Regular", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", "sans-serif";
-@ee-font-family: @ee-font-family-no-number;
-@ee-code-family: Consolas, Menlo, Courier, monospace;
-@ee-font-variant-base: normal;
-@ee-font-size-s: 12px;
-@ee-font-size-m: 14px;
-@ee-font-size-l: 16px;
-@ee-font-size-xl: 20px;
-@ee-line-height: 1.5;
-
-/**
- * box
- * @description Try hard to put all box(block) related variables in this file.
- */
-@ee-border-radius-xs: 2px;
-@ee-border-width-base: 1px;
-@ee-border-style-base: solid;
-// box-shadow blur的大小
-@ee-outline-blur-size: 6px;
-// box-shadow 宽度
-@ee-outline-width: 0;
-@ee-input-shadow: 0 2px 6px 0 var(--theme-primary-color);
-@ee-input-error-shadow: 0 2px 6px 0 var(--theme-error-color);
-@ee-input-warning-shadow: 0 2px 6px 0 var(--theme-warning-color);
-
-/**
- * alert
- * 信息提示
- */
+// Alert
+// ---
 @alert-success-border-color: var(--alert-success-border-color);
 @alert-success-bg-color: var(--alert-success-bg-color);
 @alert-success-icon-color: var(--alert-success-icon-color);
