--- a/packages/ui/tag/src/index.less
+++ b/packages/ui/tag/src/index.less
@@ -2,7 +2,7 @@
 
 .@{osui-tag-class-prefix} {
     border: 1px solid transparent;
-    //border: none;
+    // border: none;
 
     &:hover {
         background: var(--theme-bg-color-base);
@@ -11,7 +11,26 @@
     .ant-tag-close-icon {
         color: var(--theme-text-color);
     }
+}
 
+.ant-tag-blue {
+    color: var(--tag-font-color);
+    background: var(--tag-blue-color);
+}
+
+.ant-tag-green {
+    color: var(--tag-font-color);
+    background: var(--tag-green-color);
+}
+
+.ant-tag-red {
+    color: var(--tag-font-color);
+    background: var(--tag-red-color);
+}
+
+.ant-tag-yellow {
+    color: var(--tag-font-color);
+    background: var(--tag-yellow-color);
 }
 
 .ant-tag-checkable-checked {
