--- a/packages/ui/tag/src/index.less
+++ b/packages/ui/tag/src/index.less
@@ -23,6 +23,11 @@
     background: var(--tag-green-color);
 }
 
+.ant-tag-purple {
+    color: var(--tag-font-color);
+    background: var(--tag-purple-color);
+}
+
 .ant-tag-red {
     color: var(--tag-font-color);
     background: var(--tag-red-color);
@@ -31,6 +36,10 @@
 .ant-tag-yellow {
     color: var(--tag-font-color);
     background: var(--tag-yellow-color);
+}
+
+.ant-tag-checkable {
+    border: 2px solid transparent;
 }
 
 .ant-tag-checkable-checked {
