feat:update tag

--- a/packages/ui/tag/src/index.less
+++ b/packages/ui/tag/src/index.less
@@ -2,7 +2,6 @@
 
 .@{osui-tag-class-prefix} {
     border: 1px solid transparent;
-    // border: none;
 
     &:hover {
         background: var(--theme-bg-color-base);
@@ -43,11 +42,12 @@
 }
 
 .ant-tag-checkable-checked {
-    background:@tag-default-bg;
+    background:  var(--color-brand-1);
     border:2px solid var(--color-brand-4);
     color: @text-color;
 }
 
+/* 边框虚线示例 */
 .osui-tag-dome-dashed {
     background: #fff;
     border: 1px solid rgba(218,222,227,1);
