--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -133,3 +133,14 @@
 @alert-close-color:  var(--theme-text-color-secondary);
 @alert-with-description-padding: var(--alert-with-description-padding);
 @alert-with-description-icon-top: var(--alert-with-description-icon-top);
+
+//Button
+@btn-border-radius-base: 4px;
+@btn-default-color: var(--color-gray-9);
+@btn-default-bg: var(--color-gray-1);
+@btn-default-border: var(--color-gray-5);
+@btn-disable-color: var(--color-gray-6);
+@btn-disable-bg: var(--color-gray-1);
+@btn-disable-border: var(--color-gray-4);
+@btn-primary-color: #fff;
+@btn-primary-bg: var(--color-brand-6);
