--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -141,7 +141,7 @@
 @btn-disable-color: var(--color-gray-6);
 @btn-disable-bg: var(--color-gray-1);
 @btn-disable-border: var(--color-gray-4);
-@btn-primary-color: #fff;
+@btn-primary-color: var(--color-gray-1);
 @btn-primary-bg: var(--color-brand-6);
 
 // 自定义的一些less变量patch，放在最下面
