feat:update tag

--- a/packages/ui/tag/src/index.less
+++ b/packages/ui/tag/src/index.less
@@ -10,31 +10,33 @@
     .ant-tag-close-icon {
         color: var(--theme-text-color);
     }
-}
 
-.ant-tag-blue {
-    color: var(--tag-font-color);
-    background: var(--tag-blue-color);
-}
+    &.ant-tag-blue {
+        color: var(--tag-font-color);
+        background: var(--tag-blue-color);
+    }
 
-.ant-tag-green {
-    color: var(--tag-font-color);
-    background: var(--tag-green-color);
-}
 
-.ant-tag-purple {
-    color: var(--tag-font-color);
-    background: var(--tag-purple-color);
-}
+    &.ant-tag-green {
+        color: var(--tag-font-color);
+        background: var(--tag-green-color);
+    }
 
-.ant-tag-red {
-    color: var(--tag-font-color);
-    background: var(--tag-red-color);
-}
+    &.ant-tag-purple {
+        color: var(--tag-font-color);
+        background: var(--tag-purple-color);
+    }
 
-.ant-tag-yellow {
-    color: var(--tag-font-color);
-    background: var(--tag-yellow-color);
+    &.ant-tag-red {
+        color: var(--tag-font-color);
+        background: var(--tag-red-color);
+    }
+
+    &.ant-tag-yellow {
+        color: var(--tag-font-color);
+        background: var(--tag-yellow-color);
+    }
+
 }
 
 .ant-tag-checkable {
