fix: 修改公共样式文件注释，修改button命名

--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -134,6 +134,7 @@
 @tree-node-selected-bg: var(--tree-node-selected-bg, #dce1fa); // @primary-2
 
 //Button
+// ---
 @btn-border-radius-base: 4px;
 @btn-default-color: var(--color-gray-9);
 @btn-default-bg: var(--color-gray-1);
