feat:update tag

--- a/packages/ui/tag/src/index.less
+++ b/packages/ui/tag/src/index.less
@@ -39,14 +39,14 @@
 
 }
 
-.ant-tag-checkable {
+.@{osui-tag-class-prefix}-checkable {
     border: 2px solid transparent;
-}
 
-.ant-tag-checkable-checked {
-    background:  var(--color-brand-1);
-    border:2px solid var(--color-brand-4);
-    color: @text-color;
+    &.ant-tag-checkable-checked {
+        background:  var(--color-brand-1);
+        border:2px solid var(--color-brand-4);
+        color: @text-color;
+    }
 }
 
 /* 边框虚线示例 */
