--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -133,6 +133,14 @@
 @tree-node-hover-bg: var(--tree-node-hover-bg, --theme-secondary-color-hover);
 @tree-node-selected-bg: var(--tree-node-selected-bg, #dce1fa); // @primary-2
 
+// Tooltip
+// ---
+// Tooltip text color
+@tooltip-color: var(--tooltip-color);
+// Tooltip background color
+@tooltip-bg: var(--tooltip-bg);
+
+
 // 自定义的一些less变量patch，放在最下面
 // ----
 @height-s: 24px;
