--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -157,3 +157,7 @@
 @tag-default-color: @text-color;
 @tag-font-size: @font-size-base;
 @tag-line-height: 22px;
+
+// Table
+//--
+@table-row-hover-bg: var(--color-gray-3);
