fix: 修改样式文件格式

--- a/packages/ui/tabs/src/index.less
+++ b/packages/ui/tabs/src/index.less
@@ -1,15 +1,15 @@
 @osui-tabs-class-prefix: osui-tabs;
 
 .@{osui-tabs-class-prefix} {
-    &.ant-tabs-top  > .ant-tabs-nav::before {
-        border-bottom: 2px solid #ECEDF0;
+    &.ant-tabs-top > .ant-tabs-nav::before {
+        border-bottom: 2px solid #ecedf0;
     }
 
     .ant-tabs-tab .anticon {
         margin-right: 4px;
     }
 
-    .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn{
+    .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
         font-weight: normal;
     }
 
