--- a/packages/ui/right-dropdown/src/index.less
+++ b/packages/ui/right-dropdown/src/index.less
@@ -1,5 +1,15 @@
-@osui-right-dropdown-class-prefix: osui-right-dropdown;
+ // TODO 阴影样式等Menu、Dropdown样式更改完应该就正常了。可能需要引入文件下该组件
 
-.@{osui-right-dropdown-class-prefix} {
+@osui-menu-dropdown-class-prefix: osui-menu-dropdown;
+
+.@{osui-menu-dropdown-class-prefix} {
 
 }
+
+.@{osui-menu-dropdown-class-prefix}-menu {
+
+    &.ant-dropdown-menu-submenu-popup ul {
+        margin-left: -8px;
+    }
+}
+
