--- a/packages/ui/message/src/index.less
+++ b/packages/ui/message/src/index.less
@@ -5,4 +5,24 @@
         box-shadow: 0 4 8px -2px rgba(9, 30, 66, .25), 0 0 1px 0 rgba(9, 30, 66, .31);
         border-radius: 4px;
     }
+
+    .osui-icon {
+        padding-right: 8px;
+    }
+
+    &-infoIcon {
+        color: var(--theme-info-color);
+    }
+
+    &-successIcon {
+        color: var(--theme-success-color);
+    }
+
+    &-errorIcon {
+        color: var(--theme-error-color);
+    }
+
+    &-warningIcon {
+        color: var(--theme-warning-color);
+    }
 }
