fix: input border color

--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -75,7 +75,7 @@
 @input-height-base: @height-m;
 @input-height-lg: @height-l;
 @input-height-xl: @height-xl;
-@input-hover-border-color: var(--theme-primary-color);
+@input-hover-border-color: var(--theme-border-color-base);
 
 // Table
 // ---
@@ -152,6 +152,10 @@
 // Tooltip background color
 @tooltip-bg: var(--tooltip-bg);
 
+// Outline
+// ---
+@outline-width: 1px;
+@outline-blur-size: 0px;
 
 // 自定义的一些less变量patch，放在最下面
 // ----
