--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -38,14 +38,13 @@
             background: transparent;
 
             &:hover {
-                border: 1px solid var(--theme-border-color-base);
                 background: var(--theme-component-bg);
             }
         }
 
         &.ant-select-open .ant-select-selector {
             border: 1px solid var(--theme-primary-color-hover);
-            box-shadow: 0 0 6px 0 rgba(100, 113, 180, .2);
+            box-shadow: 0 0 0 1px var(--theme-primary-color-hover);
             background: var(--theme-component-bg);
         }
     }
@@ -59,6 +58,13 @@
 
         &:hover {
             color: var(--color-gray-6);
+        }
+    }
+
+    // hover + focus border color
+    &.ant-select-focused.ant-select-single:not(.ant-select-customize-input) {
+        .ant-select-selector {
+            border-color: var(--theme-border-color); // 为了focus时，不被hover的border减掉
         }
     }
 }
