fix: 调整radio和input的search icon

--- a/packages/ui/radio/src/index.less
+++ b/packages/ui/radio/src/index.less
@@ -12,4 +12,13 @@
             background-color: #fff;
         }
     }
+
+    .ant-radio-checked .ant-radio-inner::after,
+    .ant-radio-inner::after {
+        transition: none;
+    }
+
+    .ant-radio-checked::after {
+        animation: none;
+    }
 }
