--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -181,3 +181,7 @@
 // Badge
 // ---
 @badge-color: var(--color-error-6);
+
+// Radio
+// ---
+@radio-focus-shadow: 0 0 0 0 var(--theme-primary-color);
