fix: 修复table switch

--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -80,6 +80,9 @@
 // Table
 // ---
 @table-row-hover-bg: var(--table-row-hover-bg);
+@table-header-bg: var(--table-header-bg);
+@table-header-color: var(--table-header-color);
+@table-padding-vertical: 9.5px; // UE要求行号40，行高= {padding-vertical} * 2 + {font-size} * 1.5
 // Menu
 // ---
 @menu-inline-toplevel-item-height: 40px;
