--- a/packages/ui/switch/src/index.less
+++ b/packages/ui/switch/src/index.less
@@ -12,16 +12,19 @@
     }
 
     &.ant-switch-checked .ant-switch-inner {
-        margin-left: 9px;
+        margin-top: 1px;
+        margin-left: 7px;
         margin-right: 25px;
     }
 
     .ant-switch-inner {
+        margin-top: 1px;
         margin-right: 7px;
         margin-left: 25px;
+    }
 
-        .anticon {
-            font-size: 10px;
-        }
+    .ant-click-animating-node {
+        animation: none;
+        animation-fill-mode: none;
     }
 }
