--- a/packages/ui/back-top/src/index.less
+++ b/packages/ui/back-top/src/index.less
@@ -6,14 +6,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    opacity: 0.66;
+    opacity: .66;
 
     &:hover {
         opacity: 1;
     }
 
     svg {
-        font-size: 24px;
+        height: 20px;
+        margin-top: 4px;
         color: var(--color-gray-1);
     }
 
