--- a/packages/ui/checkbox/src/index.less
+++ b/packages/ui/checkbox/src/index.less
@@ -4,6 +4,8 @@
     .ant-checkbox-inner,
     .ant-checkbox-checked::after {
         border-radius: 4px;
+        animation: none;
+        animation-fill-mode: none;
     }
 
     .ant-checkbox-disabled .ant-checkbox-inner {
@@ -14,6 +16,8 @@
         .ant-checkbox-inner,
         .ant-checkbox-checked::after {
             border-radius: 4px;
+            animation: none;
+            animation-fill-mode: none;
         }
 
         .ant-checkbox-disabled .ant-checkbox-inner {
