--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -3,6 +3,6 @@
 .@{osui-input-class-prefix} {
     &.ant-input-affix-wrapper:focus,
     &.ant-input-affix-wrapper-focused {
-        border-color: var(--theme-primary-color);
+        border-color: var(--theme-border-focus-color);
     }
 }
