--- a/packages/ui/search-select-list/src/index.less
+++ b/packages/ui/search-select-list/src/index.less
@@ -10,12 +10,13 @@
                     border-bottom: none;
 
                     .ant-menu-horizontal {
-                        border-bottom-width: 2px;
+                        border-bottom-width: 1px;
                     }
 
                     .ant-menu-item {
                         margin-right: 33px;
                         margin-left: 0;
+                        color: var(--color-gray-7);
                     }
                 }
 
