--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -44,7 +44,7 @@
 
         &.ant-select-open .ant-select-selector {
             border: 1px solid var(--theme-primary-color-hover);
-            box-shadow: 0 0 0 1px var(--theme-primary-color-hover);
+            box-shadow: 0 0 0 1px var(--theme-border-focus-color);
             background: var(--theme-component-bg);
         }
     }
@@ -64,7 +64,7 @@
     // hover + focus border color
     &.ant-select-focused.ant-select-single:not(.ant-select-customize-input) {
         .ant-select-selector {
-            border-color: var(--theme-border-color); // 为了focus时，不被hover的border减掉
+            border-color: var(--theme-border-focus-color); // 为了focus时，不被hover的border减掉
         }
     }
 }
