--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -32,7 +32,7 @@
 @font-size-base: 14px;
 @font-size-lg: 16px;
 @font-size-sm: 12px;
-@line-height-base: 1.5;
+@line-height-base: 1.5715;
 @border-radius-base: 4px;
 @border-radius-sm: 2px;
 
@@ -147,6 +147,7 @@
 @btn-disable-border: var(--color-gray-4);
 @btn-primary-color: var(--color-gray-1);
 @btn-primary-bg: var(--color-brand-6);
+@btn-shadow: 0 2px 0 rgba(0, 0, 0, 0);
 
 // Tooltip
 // ---
