--- a/packages/ui/alert/src/index.less
+++ b/packages/ui/alert/src/index.less
@@ -15,6 +15,11 @@
             font-size: 14px;
             font-weight: bold;
         }
+
+        .ant-alert-close-icon {
+            // 由于alert-with-description的icon现在是小的，所以有description时，距离上面要和.ant-alert-icon一样
+            top: 11px;
+        }
     }
 
     &.ant-alert-warning {
