--- a/packages/ui/button/src/index.less
+++ b/packages/ui/button/src/index.less
@@ -35,7 +35,7 @@
         }
 
         &[disabled] {
-            color: var(--color-gray-6);
+            color: var(--theme-disabled-color);
             background: var(--color-gray-1);
             border-color: var(--color-gray-4);
         }
@@ -68,7 +68,7 @@
         }
 
         &[disabled] {
-            color: var(--color-gray-6);
+            color: var(--theme-disabled-color);
             background: var(--color-gray-1);
             border-color: var(--color-gray-5);
 
@@ -100,7 +100,7 @@
         }
 
         &[disabled] {
-            color: var(--color-gray-6);
+            color: var(--theme-disabled-color);
             background: var(--color-gray-1);
             border-color: var(--color-gray-4);
         }
@@ -128,7 +128,7 @@
         }
 
         &[disabled] {
-            color: var(--color-gray-6);
+            color: var(--theme-disabled-color);
             background: var(--color-gray-1);
             border-color: var(--color-gray-4);
         }
