--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -14,7 +14,7 @@
         }
 
         .ant-select-arrow svg {
-            color: var(--color-gray-6);
+            color: var(--theme-disabled-color);
         }
     }
 
