fix: alert style

--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -42,9 +42,9 @@
 @item-active-bg: var(--theme-secondary-color-hover);
 
 // LINK
-@link-color:var(--link-color);
-@link-hover-color:var(--link-hover-color);
-@link-active-color:var(--link-active-color);
+@link-color: var(--link-color);
+@link-hover-color: var(--link-hover-color);
+@link-active-color: var(--link-active-color);
 @link-decoration: none;
 @link-hover-decoration: none;
 
@@ -112,21 +112,21 @@
 
 // Alert
 // ---
-@alert-success-border-color: var(--alert-success-border-color);
+@alert-success-border-color: var(--alert-success-bg-color);
 @alert-success-bg-color: var(--alert-success-bg-color);
 @alert-success-icon-color: var(--alert-success-icon-color);
-@alert-info-border-color: var(--alert-info-border-color);
+@alert-info-border-color: var(--alert-info-bg-color);
 @alert-info-bg-color: var(--alert-info-bg-color);
 @alert-info-icon-color: var(--alert-info-icon-color);
-@alert-warning-border-color: var(--alert-warning-border-color);
+@alert-warning-border-color: var(--alert-warning-bg-color);
 @alert-warning-bg-color: var(--alert-warning-bg-color);
 @alert-warning-icon-color: var(--alert-warning-icon-color);
-@alert-error-border-color: var(--alert-error-border-color);
+@alert-error-border-color: var(--alert-error-bg-color);
 @alert-error-bg-color: var(--alert-error-bg-color);
 @alert-error-icon-color: var(--alert-error-icon-color);
 @alert-message-color: var(--theme-heading-color);
-@alert-text-color: var(--color-brand-10);
-@alert-close-color:  var(--theme-text-color-secondary);
+@alert-text-color: var(--theme-heading-color);
+@alert-close-color: var(--link-color);
 @alert-with-description-padding: var(--alert-with-description-padding);
 @alert-with-description-icon-top: var(--alert-with-description-icon-top);
 
